// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label render it should render 1`] = `
<DocumentFragment>
  .emotion-3 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
}

.emotion-2 {
  box-sizing: border-box;
  border-bottom-width: 0;
  display: block;
  margin-bottom: 0.25rem;
  padding-left: 0;
  padding-right: 0;
  text-transform: none;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 0;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  color: rgb(40,42,43);
  cursor: pointer;
}

<div
    class="emotion-3"
  >
    <label
      class="emotion-2"
      display="block"
      for="input"
    >
      <span
        class="emotion-1"
        display="flex"
      >
        <span
          class="emotion-0"
          color="colorText"
          cursor="pointer"
          font-size="fontSize30"
          font-weight="fontWeightSemibold"
        >
          child
        </span>
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Label render it should render with required 1`] = `
<DocumentFragment>
  .emotion-5 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
}

.emotion-4 {
  box-sizing: border-box;
  border-bottom-width: 0;
  display: block;
  margin-bottom: 0.25rem;
  padding-left: 0;
  padding-right: 0;
  text-transform: none;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 0;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  color: rgb(40,42,43);
  cursor: pointer;
}

.emotion-1 {
  box-sizing: border-box;
  background-color: rgb(222,88,88);
  border-radius: 50%;
  cursor: pointer;
  display: block;
  height: 4px;
  line-height: 1.25rem;
  margin-right: 0.25rem;
  width: 4px;
}

.emotion-0 {
  position: absolute;
  margin: -1px;
  border: 0;
  padding: 0;
  width: 1px;
  height: 1px;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  text-transform: none;
  white-space: nowrap;
}

<div
    class="emotion-5"
  >
    <label
      class="emotion-4"
      display="block"
      for="input"
    >
      <span
        class="emotion-3"
        display="flex"
      >
        <span
          class="emotion-1"
          cursor="pointer"
          display="block"
          height="4px"
          width="4px"
        >
          <span
            class="emotion-0"
          >
            Required: 
          </span>
        </span>
        <span
          class="emotion-2"
          color="colorText"
          cursor="pointer"
          font-size="fontSize30"
          font-weight="fontWeightSemibold"
        >
          child
        </span>
      </span>
    </label>
  </div>
</DocumentFragment>
`;
